style: reducing white space and fix the layout

--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -1,5 +1,7 @@
 .card-container {
     width: 30vw;
+    max-width: 40vw;
+    height: fit-content;
     background: rgba(206, 206, 206, 0.13);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -14,12 +16,22 @@
         .card__text {
             font-size: 3vw;
         }
+
+        .card-footer {
+            margin-top: 1vh;
+            display: flex;
+            justify-content: space-between;
+        }
+        .card__share {
+            width: 20px;
+            height: auto;
+        }
     }
 }
 
 .container-card-stack {
     width: 100%;
-    margin-top: 30vh;
+    margin-top: 10vh;
     margin-left: 150vw;
     display: flex;
     flex-direction: row;
